--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -20,12 +20,8 @@
 	<h3>Instructions</h3>
 	<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
 	<a href="#">Game</a>
-	<div>
-		<img src="images/back.png" alt="Queen of Diamonds">
-		<img src="images/back.png" alt="Queen of Hearts">
-		<img src="images/back.png" alt="King of Diamonds">
-		<img src="images/back.png" alt="King of Hearts">				
-	</div>
+
+	<div id="game-board" class="board clearfix"></div>			
 	<h2>Follow The Creator</h2>
 	<a href="https://www.instagram.com/teeoharreye14/">Instagram</a>
 </main>
